--- a/app/src/main/res/layout/quantity_dialogbox.xml
+++ b/app/src/main/res/layout/quantity_dialogbox.xml
@@ -1,38 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    android:background="@color/lightWhite">
 
-    <NumberPicker
-        android:id="@+id/numberPicker"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp" />
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/numberPicker"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="40dp"
-        android:layout_toRightOf="@+id/numberPicker"
-        android:backgroundTint="@color/teal_700"
-        android:text="Cancel"
-        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Quantity"
+            android:textSize="30sp" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_marginRight="10dp"
-        android:layout_toLeftOf="@+id/numberPicker"
-        android:backgroundTint="@color/teal_700"
-        android:text="Set"
-        android:textColor="@color/white" />
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="11dp"
+            android:layout_toRightOf="@id/title"
+            android:src="@drawable/cross" />
+    </RelativeLayout>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/remove_item"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="Remove item"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity1"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="1"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity2"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="2"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity3"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="3"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity4"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="4"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity5"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="5"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity6"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="6"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity7"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="7"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity8"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="8"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity9"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="9"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/quantity10"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="10"
+        android:textSize="25sp" />
+
+
+    <!--    <NumberPicker-->
+    <!--        android:id="@+id/numberPicker"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="64dp" />-->
+
+    <!--    <Button-->
+    <!--        android:id="@+id/button2"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@+id/numberPicker"-->
+    <!--        android:layout_marginLeft="10dp"-->
+    <!--        android:layout_marginTop="40dp"-->
+    <!--        android:layout_toRightOf="@+id/numberPicker"-->
+    <!--        android:backgroundTint="@color/teal_700"-->
+    <!--        android:text="Cancel"-->
+    <!--        android:textColor="@color/white" />-->
+
+    <!--    <Button-->
+    <!--        android:id="@+id/button1"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignBaseline="@+id/button2"-->
+    <!--        android:layout_alignBottom="@+id/button2"-->
+    <!--        android:layout_marginRight="10dp"-->
+    <!--        android:layout_toLeftOf="@+id/numberPicker"-->
+    <!--        android:backgroundTint="@color/teal_700"-->
+    <!--        android:text="Set"-->
+    <!--        android:textColor="@color/white" />-->
+
+</LinearLayout>
