--- a/app/src/main/res/layout/inventory_card_view.xml
+++ b/app/src/main/res/layout/inventory_card_view.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/medicine_name"
-                android:layout_width="wrap_content"
+                android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sample_medicine_name"
                 android:textColor="@color/black"
