--- a/app/src/main/res/layout/quantity_dialogbox.xml
+++ b/app/src/main/res/layout/quantity_dialogbox.xml
@@ -14,6 +14,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="Select Quantity"
             android:textSize="30sp" />
 
@@ -31,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="Remove item"
@@ -41,6 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="1"
@@ -51,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="2"
@@ -61,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="3"
@@ -72,6 +77,7 @@
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
         android:layout_marginTop="5dp"
+        android:textColor="@color/black"
         android:gravity="center_vertical"
         android:text="4"
         android:textSize="25sp" />
@@ -81,6 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="5"
@@ -91,6 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="6"
@@ -101,6 +109,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="7"
@@ -111,6 +120,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="8"
@@ -121,6 +131,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="9"
@@ -131,6 +142,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="10"
